...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Goals-->
        <scene sceneID="vpW-3E-61M">
            <objects>
                <tableViewController storyboardIdentifier="GoalsList" title="Goals" id="8Lj-K3-l3W" customClass="GoalsTableViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qUn-sO-VtW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <constraint firstItem="lyz-Vm-c3G" firstAttribute="top" secondItem="W78-ye-Cil" secondAttribute="topMargin" constant="-19" id="kWW-L4-D66"/>
                                        <constraint firstItem="lyz-Vm-c3G" firstAttribute="centerY" secondItem="aU7-Qz-3i8" secondAttribute="centerY" id="mT3-ou-YMc"/>
                                    </constraints>
                                </tableViewCellContentView>
                                <color key="backgroundColor" white="0.66666666669999997" alpha="0.25035761439999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="Progress" destination="piT-Bi-iNR" id="Wwr-Uy-h3p"/>
                                    <outlet property="ProgressLabel" destination="hmy-2H-u8f" id="5Vu-pY-Hd3"/>
                                    <outlet property="Title" destination="aU7-Qz-3i8" id="bt5-QB-80c"/>
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="topRight" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="goalCellExpanded" rowHeight="100" id="Zjs-yN-Ude" customClass="GoalTableViewCellExpanded" customModule="Trajectory" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="78" width="375" height="100"/>
...
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="done"/>
                                        </textField>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTd-eW-zKx">
                                            <rect key="frame" x="329" y="55" width="30" height="30"/>
                                            <state key="normal" title="Edit">
                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <segue destination="5qc-nw-ixh" kind="show" id="kdF-vV-r1n"/>
                                            </connections>
                                        </button>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7q-cT-Tlx">
                                            <rect key="frame" x="16" y="50" width="32" height="32"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="32" id="5rC-vR-xRT"/>
                                                <constraint firstAttribute="height" constant="32" id="Y6E-64-rn4"/>
                                            </constraints>
                                            <state key="normal" image="trashIcon">
                                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </state>
                                            <connections>
                                                <action selector="RemoveGoal:" destination="Zjs-yN-Ude" eventType="touchUpInside" id="3AN-Ku-scd"/>
                                            </connections>
                                        </button>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <navigationBar contentMode="scaleToFill" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ic9-ph-6TB">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                <color key="barTintColor" white="0.059999999999999998" alpha="1" colorSpace="calibratedWhite"/>
                                <items>
                                    <navigationItem title="Add Goal" id="mok-zZ-jy1">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="86q-Fs-GDW">
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="cancelButton:" destination="1J1-Dq-eMN" id="Lk3-mO-b8B"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="kqt-cj-kuO">
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="doneButton:" destination="1J1-Dq-eMN" id="OdI-gF-DSL"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
