...
        //If in the second section...
        else {
            let cell = tableView.dequeueReusableCell(withIdentifier: "organizationCell", for: indexPath)
            cell.textLabel?.text = userOrganizations[indexPath[1]].name
            cell.textLabel?.textColor = UIColor.white
            //configure right buttons
            /*cell.rightButtons = [MGSwipeButton(title: "Delete", backgroundColor: .red),
                                 MGSwipeButton(title: "More",backgroundColor: .lightGray)]
            cell.rightSwipeSettings.transition = .rotate3D*/
            return cell
        }
    }
    
...
